# backend/docs/swagger.json
@@ -1564,146 +1564,6 @@
                 }
             }
         },
-        "/admin/radioreference/counties": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns the list of counties for a given state.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin - RadioReference"
-                ],
-                "summary": "List RadioReference counties",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "State ID from RadioReference",
-                        "name": "stateId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of counties",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/radioreference/countries": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns the list of countries available in RadioReference.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin - RadioReference"
-                ],
-                "summary": "List RadioReference countries",
-                "responses": {
-                    "200": {
-                        "description": "List of countries",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/radioreference/login": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Validate RadioReference credentials for the current admin session. Credentials are not persisted.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin - RadioReference"
-                ],
-                "summary": "Login to RadioReference",
-                "parameters": [
-                    {
-                        "description": "RadioReference credentials",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/RRLoginRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Login successful",
-                        "schema": {
-                            "type": "object"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/admin/radioreference/preview/csv": {
             "post": {
                 "security": [
@@ -1747,104 +1607,6 @@
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/radioreference/states": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns the list of states/provinces for a given country.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin - RadioReference"
-                ],
-                "summary": "List RadioReference states",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Country ID from RadioReference",
-                        "name": "countryId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of states",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/radioreference/systems": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Returns the list of radio systems for a given county.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin - RadioReference"
-                ],
-                "summary": "List RadioReference systems",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "County ID from RadioReference",
-                        "name": "countyId",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of systems",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrorResponse"
-                        }
-                    },
-                    "501": {
-                        "description": "Not Implemented",
                         "schema": {
                             "$ref": "#/definitions/ErrorResponse"
                         }
@@ -5443,17 +5205,6 @@
                 },
                 "updated": {
                     "type": "integer"
-                }
-            }
-        },
-        "RRLoginRequest": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
